--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,1 +1,16 @@
-<p>This is the homepage</p>
+{{!-- <div id="welcome-div">
+  <h1>
+WELCOME TO TECH TALK BLOG
+  </h1>
+  </div>
+  <p id="description">
+    "We are a community of people dedicated to discussing the latest in tech!"
+  </p>
+  
+<div class="flex-container">
+
+  <div><a href="/maps">View Map 🗺️</a></div>
+  <div><a href="/profile">My Profile 👤</a></div>  
+</div>
+</div>
+ --}}
