--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,11 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Talk Blog</title>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <header class="display-flex justify-space-between align-center p-2">
+      <h1>
+        <a href="/">Tech Talk Blog!</a>
+      </h1>
+      <ul class="nav-menu">
+        {{#if logged_in}}
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="/profile" class="nav-link">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a href="/login" class="nav-link">Login</a>
+        </li>
+        <li class="nav-item">
+          <button class="no-button" id="logout">Logout</button>
+        </li>
+        {{else}}
+        <li class="nav-item">
+          <a href="/" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="/profile" class="nav-link">Dashboard</a>
+        </li>
+        <li class="nav-item">
+          <a href="/login" class="nav-link">Login</a>
+        {{/if}}
+        </li>
+      </ul>
+      </nav>
+    </header>
  <main>
     {{{ body }}}
  </main>
+
+ <!-- Render script for logged in users only -->
+  {{#if logged_in}}
+  <script src="/js/logout.js"></script>
+  {{/if}}
 </body>
 </html>
