--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
           <a href="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/profile" class="nav-link">Dashboard</a>
+          <a href="/profile" class="nav-link">Profile</a>
         </li>
         <li class="nav-item">
           <a href="/login" class="nav-link">Login</a>
@@ -31,7 +31,7 @@
           <a href="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/profile" class="nav-link">Dashboard</a>
+          <a href="/profile" class="nav-link">Profile</a>
         </li>
         <li class="nav-item">
           <a href="/login" class="nav-link">Login</a>
