--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -5,10 +5,9 @@
   <p>Created by {{user.name}} on {{format_date date_created}}</p>
   <p>
     <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
     needed
   </p>
   <p>
-    <button class="btn btn-primary">Fund this Project!</button>
+    <button class="btn btn-primary">Reply to this post!</button>
   </p>
 </div>
