--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+
+<head class="header">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Talk Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    <header class="display-flex justify-space-between align-center p-2">
+    <div class="flex-column justify-space-around">
+      <header class="display-flex justify-space-between align-center p-2">
       <h1>
+        <span role="img" aria-label="robot">🤖</span>
         <a href="/">Tech Talk Blog!</a>
       </h1>
-      <ul class="nav-menu">
-        {{#if logged_in}}
-        <li class="nav-item">
-          <a href="/" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="/profile" class="nav-link">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a href="/login" class="nav-link">Login</a>
-        </li>
-        <li class="nav-item">
-          <button class="no-button" id="logout">Logout</button>
-        </li>
-        {{else}}
-        <li class="nav-item">
-          <a href="/" class="nav-link">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href="/profile" class="nav-link">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a href="/login" class="nav-link">Login</a>
-        {{/if}}
-        </li>
-      </ul>
-      </nav>
+      <nav>
+          <!-- Conditionally render login or logout links -->
+          <ul class="nav-bar">
+
+            {{#if logged_in}}
+              <li><a href="/" class="navbar-list">Home</a></li>
+              <li><a href="/profile">Profile</a></li>
+              <li><a href="/login">Login</a></li>
+              <li><a href="" id="logout">Logout</a></li>
+            {{else}}
+              <li><a href="/">Home</a></li>
+              <li><a href="/profile">Profile</a></li>
+              <li> <a href="/login">Login</a></li>
+            {{/if}}
+
+          </ul>
+        </nav>
     </header>
+    </div>
  <main>
     {{{ body }}}
  </main>
-
+<footer>
+  <h3>Want to start chatting? 
+    <a href="/signup">Click here!</a></h3>
+</footer>
  <!-- Render script for logged in users only -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
   {{/if}}
 </body>
+
 </html>
