--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -38,10 +38,11 @@
  <main>
     {{{ body }}}
  </main>
-<footer>
+{{!-- <footer>
   <h3>Want to start chatting? 
     <a href="/signup">Click here!</a></h3>
-</footer>
+</footer> --}}
+
  <!-- Render script for logged in users only -->
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
