--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
       <header class="display-flex justify-space-between align-center p-2">
       <h1>
         <span role="img" aria-label="robot">🤖</span>
-        <a href="/">Tech Talk Blog!</a>
+        <a href="/">Tech Talk</a>
       </h1>
       <nav>
           <!-- Conditionally render login or logout links -->
