--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,32 @@
-<div class="row">
+// alt login text 
+{{!-- <div class="d-flex justify-content-around">
+  <form class="form-inline">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+  <form class="form-inline">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</div> --}}
+
+
+<div class="container">
+  <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
 
@@ -37,6 +65,7 @@
       </div>
     </form>
   </div>
+</div>
 </div>
 
 <script src="./js/login.js"></script>
